--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-/src/BC_Project/
-/src/BOOTCAMP/
-/src/components/
-/src/hooks/
-/src/OPBC/
+src/BC_Project/
+src/BOOTCAMP/
+src/components/
+src/hooks/
+src/OPBC/
