--- a/package.json
+++ b/package.json
@@ -2,29 +2,36 @@
   "name": "practices",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@hookform/resolvers": "^3.3.4",
+    "@types/jest": "^29.5.12",
     "axios": "^1.6.7",
+    "babel-jest": "^29.7.0",
     "immer": "^10.0.3",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.1",
+    "whatwg-fetch": "^3.6.20",
     "yup": "^1.4.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.2.2",
+    "@testing-library/react": "^14.3.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
