--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "npm": "^10.4.0",
+    "query-string": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
