--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practices",
   "private": true,
   "version": "0.0.0",
-  "type": "vitest",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,7 +13,11 @@
   "dependencies": {
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
     "@types/jest": "^29.5.13",
     "axios": "^1.6.7",
     "babel-jest": "^29.7.0",
