--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/jest": "^29.5.13",
     "axios": "^1.6.7",
     "babel-jest": "^29.7.0",
