--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/jest": "^29.5.13",
-    "axios": "^1.6.7",
+    "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
     "immer": "^10.0.3",
     "install": "^0.13.0",
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
     "whatwg-fetch": "^3.6.20",
     "yup": "^1.4.0",
@@ -46,7 +47,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "happy-dom": "^14.3.10",
+    "happy-dom": "^16.5.3",
     "postcss": "^8.4.37",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4",
