--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.13",
     "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
+    "firebase": "^11.2.0",
     "immer": "^10.0.3",
     "install": "^0.13.0",
     "jest": "^29.7.0",
